--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,23 @@
 .container {
+  width: 100vw;
+  height: 100vh;
   display: flex;
+  flex-direction: column;
+  gap: 10px;
   justify-content: center;
   align-items: center;
+  background-color: aqua;
+}
+.input {
+  width: 280px;
+  height: 60px;
+}
 
+.chip {
+
+}
+.strength {
+  width: 50px;
+  height: 20px;
+  border: solid 1px red;
 }
